# CountryExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_linux.sh  setup_windows.bat
include/: Application.h  Country.h  DataManager.h  HTTPClient.h
src/: Application.cpp  Country.cpp  DataManager.cpp  HTTPClient.cpp  main.cpp
